# neptun.cli

./: .gitignore  README.md  neptun-config.json  pyproject.toml
neptun/: __init__.py  __main__.py  cli.py  test.py
neptun/bot/: chat.py  neptunbot.py  tui.py
neptun/bot/static/: style.css
neptun/cmd/: assistant.py  auth.py  config.py  github.py
neptun/config/: config.ini  default.json  settings.toml
neptun/model/: http_requests.py  http_responses.py  responses.py
neptun/utils/: auth.py  authentication_manager.py  config_parser.py  exceptions.py  helpers.py  managers.py  services.py
tests/: test_neptun.py
