[tool.poetry]
name = "neptun"
version = "0.1.0"
description = "A CLI-Interface build with python which is compatible with tethe Neptun-web-application and alloows a seemsless automatic generation of deployment scripts based on the provided folder structure."
authors = ["stevan06v"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dynaconf = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
