[tool.poetry]
name = "neptun"
version = "0.1.0"
description = "A CLI-Interface build with python which is compatible with tethe Neptun-web-application and alloows a seemsless automatic generation of deployment scripts based on the provided folder structure."
authors = ["stevan06v"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pytest = "^8.2.2"
httpx = "^0.27.0"
pydantic = "^2.8.2"
cache = "^1.0.3"
configparser = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
